--- a/PCA/PCA/Views/DailyReport/PictureIndex.cshtml
+++ b/PCA/PCA/Views/DailyReport/PictureIndex.cshtml
@@ -52,7 +52,7 @@
                             <div class="btn-group" role="group" aria-label="...">
                                 <a href="/DailyReport/Edit/@picture.DailyReportId" type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
                                 <a href="/DailyReport/Delete/@picture.DailyReportId" type="button" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span></a>
-                                <a href="/DailyReport/Detail/@picture.DailyReportPictureId" type="button" class="btn btn-default"><span class="glyphicon glyphicon-eye-open"></span></a>
+                                <a href="/DailyReport/ViewAttachment/@picture.DailyReportPictureId" type="button" class="btn btn-default" target="_blank"><span class="glyphicon glyphicon-eye-open"></span></a>
                             </div>
                         </td>
                     </tr>
