--- a/PCA/PCA/Views/Shared/_Layout.cshtml
+++ b/PCA/PCA/Views/Shared/_Layout.cshtml
@@ -51,14 +51,16 @@
                     @RenderBody()
                 </div>
             </div>
-        </div>
 
             <!-- End Body -->
             <!-- Footer -->
-            <hr />
-            <footer>
+            <div class="row">
                 <p>&copy; @DateTime.Now.Year - Planning & Construction Associates Inc.</p>
-            </footer>
+            </div>
+        </div>
+
+            
+            
         </div>
 
         <div class="row">
@@ -76,7 +78,6 @@
                 </div>
             </a>
         </div>
-    </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
