--- a/PCA/PCA/Views/DailyReport/CreateWork.cshtml
+++ b/PCA/PCA/Views/DailyReport/CreateWork.cshtml
@@ -1,7 +1,9 @@
 ﻿@model PCA.Models.WorkItem
 
 @{
+    ViewBag.PanelTitle = "Create Work Performed";
     ViewBag.Title = "CreateWork";
+    Layout = "~/Views/Shared/_LayoutForm.cshtml";
 }
 @section sideNavDailyReport
 {
@@ -9,7 +11,6 @@
 }
 
 
-<h2>CreateWork</h2>
 
 @using (Html.BeginForm())
 {
@@ -17,7 +18,7 @@
     @Html.HiddenFor(model => model.DailyReportId)
 
     <div class="form-horizontal">
-        <h4>WorkPerformed</h4>
+        <a href="/DailyReport/Detail/@Model.DailyReportId" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -62,12 +63,9 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
