--- a/PCA/PCA/Views/DailyReport/WorkDetail.cshtml
+++ b/PCA/PCA/Views/DailyReport/WorkDetail.cshtml
@@ -2,10 +2,10 @@
 
 @{
     ViewBag.Title = "Details";
-    ViewBag.PanelTitle = "Work Performed Details";
+    ViewBag.PanelTitle = "Work Performed Detail";
     Layout = "~/Views/Shared/_LayoutForm.cshtml";
 }
-<a href="/DailyReport/Detail/@Model.DailyReportId" class="btn btn-default">Back</a>
+<a href="/DailyReport/Detail/@Model.DailyReportId" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
 
 <div>
     <hr />
