--- a/PCA/PCA/Views/DailyReport/CreatePicture.cshtml
+++ b/PCA/PCA/Views/DailyReport/CreatePicture.cshtml
@@ -1,18 +1,17 @@
 ﻿@model PCA.Models.DailyReportPicture
 
 @{
+    ViewBag.PanelTitle = "Create Daily Report";
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_LayoutForm.cshtml";
 }
 
-<h2>Create</h2>
 
 @using (Html.BeginForm("CreatePicture", "DailyReport", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-
     <div class="form-horizontal">
-        <h4>DailyReportPicture</h4>
+        <a href="/DailyReport/PictureIndex/@Model.DailyReportId" class="btn btn-default">Back</a>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -48,12 +47,9 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
