--- a/PCA/PCA/Views/DailyReport/PictureIndex.cshtml
+++ b/PCA/PCA/Views/DailyReport/PictureIndex.cshtml
@@ -12,7 +12,7 @@
     <div class="panel-heading"><h4>Current Daily Report</h4></div>
     <div class="panel-body">
         <a href="/DailyReport/Index" class="btn btn-default">Back</a>
-        <a href="/DailyReport/CreatePicture" class="btn btn-success">Add Picture</a>
+        <a href="/DailyReport/CreatePicture/@ViewBag.CurrentDailyReportId" class="btn btn-success">Add Picture</a>
         <hr />
         <b>
             Report Date:
