--- a/PCA/PCA/Views/DailyReport/PictureIndex.cshtml
+++ b/PCA/PCA/Views/DailyReport/PictureIndex.cshtml
@@ -7,23 +7,29 @@
 {
     sideNavItemSelected
 }
+@section scripts
+{
+    <script src="~/Scripts/DataTablesCustomization.js"></script>
+    <script src="~/Scripts/PCA.js"></script>
+}
 
 <div class="panel panel-default">
     <div class="panel-heading"><h4>Current Daily Report</h4></div>
     <div class="panel-body">
-        <a href="/DailyReport/Index" class="btn btn-default">Back</a>
-        <a href="/DailyReport/CreatePicture/@ViewBag.CurrentDailyReportId" class="btn btn-success">Add Picture</a>
+        <a href="/DailyReport/Index" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
         <hr />
-        <b>
-            Report Date:
-        </b>
-        <p>@ViewBag.currentReportDate</p>
-        <b>
-            Report Summary:
-        </b>
-        <p>@ViewBag.currentReportSummary</p>
-
-
+        <div class="col-xs=12">
+            <div class="col-xs-6 DetailItem">
+                <h5>Report Date:</h5>
+                <p>@ViewBag.currentReportDate</p>
+            </div>
+            <div class="col-xs-6 DetailItem">
+                <h5>
+                    Report Summary:
+                </h5>
+                <p>@ViewBag.currentReportSummary</p>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -32,27 +38,27 @@
         <h4>Pictures</h4>
     </div>
     <div class="panel-body">
+        <a href="/DailyReport/CreatePicture/@ViewBag.CurrentDailyReportId" class="btn btn-success"><span class="glyphicon glyphicon-plus-sign"></span> Add Picture</a>
+        <hr />
+
+        <div id="LinkButtonGroup" class="btn-group col-xs-12" role="group" aria-label="...">
+            <a id="LinkButton1" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
+            <a id="LinkButton2" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete</a>
+            <a id="LinkButton3" href="" type="button" class="btn btn-default" target="_blank"><span class="glyphicon glyphicon-eye-open"></span> View</a>
+        </div>
+
         <table id="table_id" class="display">
             <thead>
                 <tr>
-                    <th>Date</th>
                     <th>Description</th>
-                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var picture in Model)
                 {
-                    <tr>
-                        <td>@Html.DisplayFor(modelItem => picture.Date)</td>
+                    <tr class="LinkButton" data-link-button-1="/DailyReport/PictureEdit/@picture.DailyReportPictureId" data-link-button-2="/DailyReport/PictureDelete/@picture.DailyReportPictureId"
+                             data-link-button-3="/DailyReport/ViewAttachment/@picture.DailyReportPictureId">
                         <td>@picture.Description</td>
-                        <td>
-                            <div class="btn-group" role="group" aria-label="...">
-                                <a href="/DailyReport/PictureEdit/@picture.DailyReportPictureId" type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
-                                <a href="/DailyReport/PictureDelete/@picture.DailyReportPictureId" type="button" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span></a>
-                                <a href="/DailyReport/ViewAttachment/@picture.DailyReportPictureId" type="button" class="btn btn-default" target="_blank"><span class="glyphicon glyphicon-eye-open"></span></a>
-                            </div>
-                        </td>
                     </tr>
                 }
             </tbody>
