--- a/PCA/PCA/Views/Budget/Create.cshtml
+++ b/PCA/PCA/Views/Budget/Create.cshtml
@@ -1,22 +1,21 @@
 ﻿@model PCA.Models.Budget
 
 @{
+    ViewBag.PanelTitle = "Create Budget Item";
     ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutForm.cshtml";
 }
 @section sideNavBudgets
 {
     sideNavItemSelected
 }
 
-<h2>Create</h2>
-
+<a href="/Budget/" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Budget</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -101,12 +100,8 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
