--- a/PCA/PCA/Views/Invoice/Create.cshtml
+++ b/PCA/PCA/Views/Invoice/Create.cshtml
@@ -1,18 +1,21 @@
 ﻿@model PCA.Models.Invoice
 
-@{
+@{ 
+    ViewBag.PanelTitle = "Create Invoice";
     ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutForm.cshtml";
 }
-
-<h2>Create</h2>
+@section sideNavInvoices
+{
+    sideNavItemSelected
+}
 
 @using (Html.BeginForm("Create", "Invoice", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Invoice</h4>
+        <a href="/Invoice/" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -112,12 +115,8 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
