--- a/PCA/PCA/Views/Invoice/Delete.cshtml
+++ b/PCA/PCA/Views/Invoice/Delete.cshtml
@@ -1,16 +1,20 @@
 ﻿@model PCA.Models.Invoice
 
 @{
+    ViewBag.PanelTitle = "Delete Invoice";
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutForm.cshtml";
+}
+@section sideNavInvoices
+{
+    sideNavItemSelected
 }
 
-<h2>Delete</h2>
-
+<a href="/Invoice/" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
+<hr />
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Invoice</h4>
-    <hr />
+
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Contractors.Name)
@@ -107,8 +111,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-danger" />
         </div>
     }
 </div>
