--- a/PCA/PCA/Views/Invoice/Edit.cshtml
+++ b/PCA/PCA/Views/Invoice/Edit.cshtml
@@ -1,18 +1,20 @@
 ﻿@model PCA.Models.Invoice
 
 @{
+    ViewBag.PanelTitle = "Edit Invoice";
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_LayoutForm.cshtml";
 }
-
-<h2>Edit</h2>
-
+@section sideNavInvoices
+{
+    sideNavItemSelected
+}
+<a href="/Invoice/" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
 @using (Html.BeginForm("Edit", "Invoice", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Invoice</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.InvoiceId)
@@ -105,18 +107,12 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-
         @*<div class="form-group">
             @Html.Label("InvoiceImage", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <input type="file" id="InvoiceImage" name="upload" />
             </div>
-        </div>*@
+        </div>
 
         @if (Model.Files.Any(f => f.FileType == FileType.InvoiceImage))
         {
@@ -126,7 +122,7 @@
                     <img src="~/File?id=@Model.Files.First(f => f.FileType == FileType.InvoiceImage).FileId" alt="avatar" />
                 </div>
             </div>
-        }
+        }*@
 
         <div class="form-group">
             @Html.Label("InvoiceImage", new { @class = "control-label col-md-2" })
@@ -134,9 +130,11 @@
                 <input type="file" id="InvoiceImage" name="upload" />
             </div>
         </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
+        </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
